--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "prettier": "prettier-eslint --write src/**/*.vue",
     "lint": "eslint --ext .js,.vue src/",
-    "lint-autofix": "eslint --ext .js,.vue src/ --fix"
+    "lint:write": "eslint --debug --ext .js,.vue src/ --fix",
+    "prettier": "prettier --write src/**/*.vue"
   },
   "husky": {
     "hooks": {
@@ -18,10 +18,7 @@
     }
   },
   "lint-staged": {
-    "*.(js|vue)": [
-      "npm run lint-autofix",
-      "git add"
-    ]
+    "*.(js|vue)": ["npm run lint:write", "git add"]
   },
   "dependencies": {
     "vue": "^2.5.11"
@@ -41,14 +38,17 @@
     "css-loader": "^0.28.7",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.0.1",
     "file-loader": "^1.1.4",
     "husky": "^3.1.0",
     "lint-staged": "^9.4.3",
     "node-sass": "^4.13.0",
-    "prettier-eslint": "^9.0.1",
-    "prettier-eslint-cli": "^5.0.0",
+    "prettier": "^1.19.1",
     "sass-loader": "^6.0.7",
     "vue-eslint-parser": "^7.0.0",
     "vue-loader": "^13.0.5",
