--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     }
   },
   "lint-staged": {
-    "*.(js|vue)": ["npm run lint:write", "git add"]
+    "*.(js|vue)": [
+      "npm run lint:write",
+      "git add"
+    ]
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "vue": "^2.6.10"
   },
   "browserslist": [
     "> 1%",
@@ -29,13 +32,15 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-stage-3": "^7.0.0",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.2.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.7.0",
@@ -44,16 +49,18 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.0.1",
-    "file-loader": "^1.1.4",
+    "file-loader": "^4.2.0",
     "husky": "^3.1.0",
     "lint-staged": "^9.4.3",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^8.0.0",
     "vue-eslint-parser": "^7.0.0",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.5"
+    "vue-loader": "^15.7.2",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
